# SpeedTracker

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  docker-compose.yml  speedtracker.toml
data/: readme.txt
docker_files/: cron_file.txt  entrypoint.sh  iwgetid  speedtracker.toml  template.html
jslibs/: README.md
pi_files/: speedtracker.toml  template.html
speedtracker/: Cargo.toml
speedtracker/src/: chart_config.rs  constants.rs  html_generator.rs  json_parser.rs  lib.rs  lib_constants.rs  main.rs  parser.rs  template.html
src/: lib.rs  main.rs
