[package]
name = "speedtracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mylib"
path = "src/lib.rs"

[dependencies]
confy = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
flexi_logger = "0.18"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.5"
faccess = { path = "../faccess" }
